# the-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: __init__.py  adapters.py  data.py  manifest.py  nautilus.py  params.py  plotting.py  run_analosis_mock.py  run_single_mock.py  solver.py
benchmark/test/: autolens_diagnostics.npz  herculens_diagnostics.npz  jaxtronomy_diagnostics.npz  lenstronomy_diagnostics.npz  tinylensgpu_diagnostics.npz
benchmark/test2/: autolens_diagnostics.npz  herculens_diagnostics.npz  jaxtronomy_diagnostics.npz  lenstronomy_diagnostics.npz  tinylensgpu_diagnostics.npz
notebooks/: 01_forward_model_check.ipynb
